Human and Robot path added

--- a/GetCredentials.xaml
+++ b/GetCredentials.xaml
@@ -143,7 +143,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <TryCatch.Try>
-        <Sequence sap:VirtualizedContainerService.HintSize="624,2430" sap2010:WorkflowViewState.IdRef="Sequence_27">
+        <Sequence sap:VirtualizedContainerService.HintSize="624,2511.3333333333335" sap2010:WorkflowViewState.IdRef="Sequence_27">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -156,7 +156,7 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </p:GetSecureCredential>
-          <If sap2010:Annotation.AnnotationText="" Condition="[firstCreds]" sap:VirtualizedContainerService.HintSize="562,2152" sap2010:WorkflowViewState.IdRef="If_10">
+          <If sap2010:Annotation.AnnotationText="" Condition="[firstCreds]" sap:VirtualizedContainerService.HintSize="562,2233.3333333333335" sap2010:WorkflowViewState.IdRef="If_10">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -181,7 +181,7 @@
               </Sequence>
             </If.Then>
             <If.Else>
-              <Sequence sap:VirtualizedContainerService.HintSize="528,1660" sap2010:WorkflowViewState.IdRef="Sequence_26">
+              <Sequence sap:VirtualizedContainerService.HintSize="528,1741.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_26">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -194,14 +194,14 @@
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
                 </ui:LogMessage>
-                <p:RequestCredential Password="{x:Null}" sap2010:Annotation.AnnotationText="" DisplayName="Request Credentials" sap:VirtualizedContainerService.HintSize="486,70.66666666666667" sap2010:WorkflowViewState.IdRef="RequestCredential_4" Message="input credentials" PasswordSecureString="[securePassword]" Result="[credsProvided]" Title="Credentials request" Username="[username]">
+                <p:RequestCredential Password="{x:Null}" sap2010:Annotation.AnnotationText="Used to request the user to type their credentals after failing to get them from the credentals manager" DisplayName="Request Credentials" sap:VirtualizedContainerService.HintSize="486,70.66666666666667" sap2010:WorkflowViewState.IdRef="RequestCredential_4" Message="input credentials" PasswordSecureString="[securePassword]" Result="[credsProvided]" Title="Credentials request" Username="[username]">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
                 </p:RequestCredential>
-                <If Condition="[credsProvided]" sap:VirtualizedContainerService.HintSize="486,1232" sap2010:WorkflowViewState.IdRef="If_11">
+                <If Condition="[credsProvided]" sap:VirtualizedContainerService.HintSize="486,1313.3333333333333" sap2010:WorkflowViewState.IdRef="If_11">
                   <If.Then>
                     <Sequence sap:VirtualizedContainerService.HintSize="452,1048" sap2010:WorkflowViewState.IdRef="Sequence_21">
                       <Sequence.Variables>
